--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -27,18 +27,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 0, 0]\n",
+      "[0, 0, 2, 0, 1]\n",
+      "[0, 1, 2, 0, 0]\n",
+      "[0, 0, 1, 0, 0]\n",
+      "[0, 0, 0, 0, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "N, M = map(int, input().split())\n",
     "city = [[0] * M for _ in range(N)]\n",
     "\n",
     "for i in range(N):\n",
-    "    city[i] = map(int, input().split())\n",
+    "    city[i] = list(map(int, input().split()))\n",
     "    \n",
     "for l in city:\n",
     "    print(l)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 1, 0, 0], [0, 0, 2, 0, 1], [0, 1, 2, 0, 0], [0, 0, 1, 0, 0], [0, 0, 0, 0, 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(city)"
    ]
   }
  ],
