--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -27,23 +27,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 1, 0, 0]\n",
-      "[0, 0, 2, 0, 1]\n",
-      "[0, 1, 2, 0, 0]\n",
-      "[0, 0, 1, 0, 0]\n",
-      "[0, 0, 0, 0, 2]\n"
+      "[0, 2, 0, 1, 0]\n",
+      "[1, 0, 1, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[2, 0, 0, 1, 1]\n",
+      "[2, 2, 0, 1, 2]\n"
      ]
     }
    ],
    "source": [
-    "N, M = map(int, input().split())\n",
+    "N, M = map(int, input().split())  # (5, 2)\n",
     "city = [[0] * M for _ in range(N)]\n",
     "\n",
     "for i in range(N):\n",
@@ -55,20 +55,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 0, 1, 0, 0], [0, 0, 2, 0, 1], [0, 1, 2, 0, 0], [0, 0, 1, 0, 0], [0, 0, 0, 0, 2]]\n"
+      "[[0, 2, 0, 1, 0], [1, 0, 1, 0, 0], [0, 0, 0, 0, 0], [2, 0, 0, 1, 1], [2, 2, 0, 1, 2]]\n"
      ]
     }
    ],
    "source": [
     "print(city)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# N = 5,  M = 2,  num_chiken = 5\n",
+    "num_chiken = sum([sum([x == 2 for x in city[i]]) for i in range(len(city))])\n",
+    "print(num_chiken)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([True, False, True, True])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
