--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -84,35 +84,62 @@
     }
    ],
    "source": [
-    "# N = 5,  M = 2,  num_chiken = 5\n",
-    "num_chiken = sum([sum([x == 2 for x in city[i]]) for i in range(len(city))])\n",
-    "print(num_chiken)"
+    "# N = 5,  M = 2,  num_chicken = 5\n",
+    "num_chicken = sum([sum([x == 2 for x in city[i]]) for i in range(len(city))])\n",
+    "print(num_chicken)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "{1: (0, 1), 3: (3, 0), 4: (4, 0), 5: (4, 1), 8: (4, 4)}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "chicken_dict = {}\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if city[i][j] == 2:\n",
+    "            chicken_dict[eval('i+j')] = (i, j)\n",
+    "            \n",
+    "chicken_dict"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: (0, 1), 3: (3, 0), 4: (4, 0), 5: (4, 1), 8: (4, 4)}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chicken_dict = {}\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if city[i][j] == 2:\n",
+    "            chicken_dict[eval('i+j')] = (i, j)\n",
+    "            \n",
+    "chicken_dict"
+   ]
   }
  ],
  "metadata": {
