--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -117,16 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1: (0, 1), 3: (3, 0), 4: (4, 0), 5: (4, 1), 8: (4, 4)}"
+       "{'chicken_01': (0, 1),\n",
+       " 'chicken_30': (3, 0),\n",
+       " 'chicken_40': (4, 0),\n",
+       " 'chicken_41': (4, 1),\n",
+       " 'chicken_44': (4, 4)}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +140,7 @@
     "for i in range(N):\n",
     "    for j in range(N):\n",
     "        if city[i][j] == 2:\n",
-    "            chicken_dict[eval('i+j')] = (i, j)\n",
+    "            chicken_dict['chicken_' + str(i) + str(j)] = (i, j)\n",
     "            \n",
     "chicken_dict"
    ]
