--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -110,6 +110,29 @@
     "            chicken_dict['chicken_' + str(i) + str(j)] = (i, j)\n",
     "            \n",
     "print(chicken_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'house_03': (0, 3), 'house_10': (1, 0), 'house_12': (1, 2), 'house_33': (3, 3), 'house_34': (3, 4), 'house_43': (4, 3)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "house_dict = {}\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if city[i][j] == 1:\n",
+    "            house_dict['house_' + str(i) + str(j)] = (i, j)\n",
+    "            \n",
+    "print(house_dict)"
    ]
   }
  ],
