--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -134,6 +134,33 @@
     "            \n",
     "print(house_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(('chicken_01', (0, 1)), ('chicken_30', (3, 0)))\n",
+      "(('chicken_01', (0, 1)), ('chicken_40', (4, 0)))\n",
+      "(('chicken_01', (0, 1)), ('chicken_41', (4, 1)))\n",
+      "(('chicken_01', (0, 1)), ('chicken_44', (4, 4)))\n",
+      "(('chicken_30', (3, 0)), ('chicken_40', (4, 0)))\n",
+      "(('chicken_30', (3, 0)), ('chicken_41', (4, 1)))\n",
+      "(('chicken_30', (3, 0)), ('chicken_44', (4, 4)))\n",
+      "(('chicken_40', (4, 0)), ('chicken_41', (4, 1)))\n",
+      "(('chicken_40', (4, 0)), ('chicken_44', (4, 4)))\n",
+      "(('chicken_41', (4, 1)), ('chicken_44', (4, 4)))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in combinations(chicken_dict.items(), M):\n",
+    "    print(c)"
+   ]
   }
  ],
  "metadata": {
