--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -161,6 +161,44 @@
     "for c in combinations(chicken_dict.items(), M):\n",
     "    print(c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chicken_01 (0, 1)\n",
+      "chicken_30 (3, 0)\n",
+      "chicken_01 (0, 1)\n",
+      "chicken_40 (4, 0)\n",
+      "chicken_01 (0, 1)\n",
+      "chicken_41 (4, 1)\n",
+      "chicken_01 (0, 1)\n",
+      "chicken_44 (4, 4)\n",
+      "chicken_30 (3, 0)\n",
+      "chicken_40 (4, 0)\n",
+      "chicken_30 (3, 0)\n",
+      "chicken_41 (4, 1)\n",
+      "chicken_30 (3, 0)\n",
+      "chicken_44 (4, 4)\n",
+      "chicken_40 (4, 0)\n",
+      "chicken_41 (4, 1)\n",
+      "chicken_40 (4, 0)\n",
+      "chicken_44 (4, 4)\n",
+      "chicken_41 (4, 1)\n",
+      "chicken_44 (4, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in combinations(chicken_dict.items(), M):\n",
+    "    for c_name, c_coordinate in c:\n",
+    "        print(c_name, c_coordinate)"
+   ]
   }
  ],
  "metadata": {
