--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -199,6 +199,19 @@
     "    for c_name, c_coordinate in c:\n",
     "        print(c_name, c_coordinate)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for c in combinations(chicken_dict.items(), M):\n",
+    "    \n",
+    "    for c_name, c_coordinate in c:\n",
+    "        for h_name, h_coordinate in house_dict.items():\n",
+    "            "
+   ]
   }
  ],
  "metadata": {
