More on boj_15686.ipynb

--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -72,26 +72,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "number of chicken houses : 5   number of houses : 6\n"
      ]
     }
    ],
    "source": [
     "# N = 5,  M = 2,  num_chicken = 5\n",
     "num_chicken = sum([sum([x == 2 for x in city[i]]) for i in range(len(city))])\n",
-    "print(num_chicken)"
+    "num_house =   sum([sum([x == 1 for x in city[i]]) for i in range(len(city))])\n",
+    "\n",
+    "print(f\"number of chicken houses : {num_chicken}   number of houses : {num_house}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
