More on boj_15686.ipynb

--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -160,6 +160,8 @@
     }
    ],
    "source": [
+    "from itertools import combinations\n",
+    "\n",
     "for c in combinations(chicken_dict.items(), M):\n",
     "    print(c)"
    ]
