--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -139,23 +139,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(('chicken_01', (0, 1)), ('chicken_30', (3, 0)))\n",
-      "(('chicken_01', (0, 1)), ('chicken_40', (4, 0)))\n",
-      "(('chicken_01', (0, 1)), ('chicken_41', (4, 1)))\n",
-      "(('chicken_01', (0, 1)), ('chicken_44', (4, 4)))\n",
-      "(('chicken_30', (3, 0)), ('chicken_40', (4, 0)))\n",
-      "(('chicken_30', (3, 0)), ('chicken_41', (4, 1)))\n",
-      "(('chicken_30', (3, 0)), ('chicken_44', (4, 4)))\n",
-      "(('chicken_40', (4, 0)), ('chicken_41', (4, 1)))\n",
-      "(('chicken_40', (4, 0)), ('chicken_44', (4, 4)))\n",
-      "(('chicken_41', (4, 1)), ('chicken_44', (4, 4)))\n"
+      "chicken_01 (0, 1) chicken_30 (3, 0)\n",
+      "chicken_01 (0, 1) chicken_40 (4, 0)\n",
+      "chicken_01 (0, 1) chicken_41 (4, 1)\n",
+      "chicken_01 (0, 1) chicken_44 (4, 4)\n",
+      "chicken_30 (3, 0) chicken_40 (4, 0)\n",
+      "chicken_30 (3, 0) chicken_41 (4, 1)\n",
+      "chicken_30 (3, 0) chicken_44 (4, 4)\n",
+      "chicken_40 (4, 0) chicken_41 (4, 1)\n",
+      "chicken_40 (4, 0) chicken_44 (4, 4)\n",
+      "chicken_41 (4, 1) chicken_44 (4, 4)\n"
      ]
     }
    ],
@@ -163,7 +163,7 @@
     "from itertools import combinations\n",
     "\n",
     "for c in combinations(chicken_dict.items(), M):\n",
-    "    print(c)"
+    "    print(c[0][0], c[0][1], c[1][0], c[1][1])"
    ]
   },
   {
@@ -199,9 +199,13 @@
     }
    ],
    "source": [
+    "city_distances = []\n",
+    "\n",
     "for c in combinations(chicken_dict.items(), M):\n",
-    "    for c_name, c_coordinate in c:\n",
-    "        print(c_name, c_coordinate)"
+    "    dist_list = []\n",
+    "    dist = 0    \n",
+    "    for name, coord in house_dict.items():\n",
+    "        dist += min()"
    ]
   },
   {
