--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -168,6 +168,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def measure_dist(tuple1, tuple2):\n",
+    "    dist = abs(tuple1[0] - tuple2[0]) + abs(tuple1[1] - tuple2[1])\n",
+    "    return dist"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [
