More on boj_15686.ipynb

--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -179,44 +179,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "chicken_01 (0, 1)\n",
-      "chicken_30 (3, 0)\n",
-      "chicken_01 (0, 1)\n",
-      "chicken_40 (4, 0)\n",
-      "chicken_01 (0, 1)\n",
-      "chicken_41 (4, 1)\n",
-      "chicken_01 (0, 1)\n",
-      "chicken_44 (4, 4)\n",
-      "chicken_30 (3, 0)\n",
-      "chicken_40 (4, 0)\n",
-      "chicken_30 (3, 0)\n",
-      "chicken_41 (4, 1)\n",
-      "chicken_30 (3, 0)\n",
-      "chicken_44 (4, 4)\n",
-      "chicken_40 (4, 0)\n",
-      "chicken_41 (4, 1)\n",
-      "chicken_40 (4, 0)\n",
-      "chicken_44 (4, 4)\n",
-      "chicken_41 (4, 1)\n",
-      "chicken_44 (4, 4)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "city_distances = []\n",
     "\n",
-    "for c in combinations(chicken_dict.items(), M):\n",
-    "    dist_list = []\n",
+    "for c in combinations(chicken_dict.items(), M):    \n",
     "    dist = 0    \n",
     "    for name, coord in house_dict.items():\n",
-    "        dist += min()"
+    "        dist += min(measure_dist(c[0][1], coord), measure_dist(c[1][1], coord))\n",
+    "    city_distances.append(dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[17, 18, 15, 10, 22, 21, 15, 22, 17, 17]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_distances"
    ]
   },
   {
