--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -214,14 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
+     "ename": "IndexError",
+     "evalue": "tuple index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_15686.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 27>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     dist \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mfor\u001b[39;00m name, coord \u001b[39min\u001b[39;00m house_dict\u001b[39m.\u001b[39mitems():\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m         dist \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(measure_dist(c[\u001b[39m0\u001b[39m][\u001b[39m1\u001b[39m], coord), measure_dist(c[\u001b[39m1\u001b[39;49m][\u001b[39m1\u001b[39m], coord))\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m     city_distances\u001b[39m.\u001b[39mappend(dist)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m min_city_distance \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(city_distances)\n",
+      "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
      ]
     }
    ],
@@ -260,6 +264,47 @@
     "    \n",
     "min_city_distance = min(city_distances)\n",
     "print(min_city_distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 0, 0, 0]\n",
+      "[1, 2, 0, 0, 0]\n",
+      "[1, 2, 0, 0, 0]\n",
+      "[1, 2, 0, 0, 0]\n",
+      "[1, 2, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in city:\n",
+    "    print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'chicken_01': (0, 1), 'chicken_11': (1, 1), 'chicken_21': (2, 1), 'chicken_31': (3, 1), 'chicken_41': (4, 1)}\n",
+      "{'house_00': (0, 0), 'house_10': (1, 0), 'house_20': (2, 0), 'house_30': (3, 0), 'house_40': (4, 0)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chicken_dict)\n",
+    "print(house_dict)"
    ]
   }
  ],
