--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -214,18 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "tuple index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_15686.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 27>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     dist \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mfor\u001b[39;00m name, coord \u001b[39min\u001b[39;00m house_dict\u001b[39m.\u001b[39mitems():\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m         dist \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(measure_dist(c[\u001b[39m0\u001b[39m][\u001b[39m1\u001b[39m], coord), measure_dist(c[\u001b[39m1\u001b[39;49m][\u001b[39m1\u001b[39m], coord))\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m     city_distances\u001b[39m.\u001b[39mappend(dist)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m min_city_distance \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(city_distances)\n",
-      "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
      ]
     }
    ],
@@ -259,7 +255,10 @@
     "for c in combinations(chicken_dict.items(), M):    \n",
     "    dist = 0    \n",
     "    for name, coord in house_dict.items():\n",
-    "        dist += min(measure_dist(c[0][1], coord), measure_dist(c[1][1], coord))\n",
+    "        dist = 0\n",
+    "        for cc in c:\n",
+    "            dist += measure_dist(cc[1] - coord)\n",
+    "        \n",
     "    city_distances.append(dist)\n",
     "    \n",
     "min_city_distance = min(city_distances)\n",
