--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -168,6 +168,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chicken_01 (0, 1) chicken_30 (3, 0)\n",
+      "(0, 1)\n",
+      "(3, 0)\n",
+      "\n",
+      "chicken_01 (0, 1) chicken_40 (4, 0)\n",
+      "(0, 1)\n",
+      "(4, 0)\n",
+      "\n",
+      "chicken_01 (0, 1) chicken_41 (4, 1)\n",
+      "(0, 1)\n",
+      "(4, 1)\n",
+      "\n",
+      "chicken_01 (0, 1) chicken_44 (4, 4)\n",
+      "(0, 1)\n",
+      "(4, 4)\n",
+      "\n",
+      "chicken_30 (3, 0) chicken_40 (4, 0)\n",
+      "(3, 0)\n",
+      "(4, 0)\n",
+      "\n",
+      "chicken_30 (3, 0) chicken_41 (4, 1)\n",
+      "(3, 0)\n",
+      "(4, 1)\n",
+      "\n",
+      "chicken_30 (3, 0) chicken_44 (4, 4)\n",
+      "(3, 0)\n",
+      "(4, 4)\n",
+      "\n",
+      "chicken_40 (4, 0) chicken_41 (4, 1)\n",
+      "(4, 0)\n",
+      "(4, 1)\n",
+      "\n",
+      "chicken_40 (4, 0) chicken_44 (4, 4)\n",
+      "(4, 0)\n",
+      "(4, 4)\n",
+      "\n",
+      "chicken_41 (4, 1) chicken_44 (4, 4)\n",
+      "(4, 1)\n",
+      "(4, 4)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "for c in combinations(chicken_dict.items(), M):\n",
+    "    print(c[0][0], c[0][1], c[1][0], c[1][1])\n",
+    "    for cc in c:\n",
+    "        print(cc[1])\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -214,14 +276,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'tuple' and 'tuple'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_15686.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 27>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m         dist \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m         \u001b[39mfor\u001b[39;00m cc \u001b[39min\u001b[39;00m c:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m             dist \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m measure_dist(cc[\u001b[39m1\u001b[39;49m] \u001b[39m-\u001b[39;49m coord)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     city_distances\u001b[39m.\u001b[39mappend(dist)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m min_city_distance \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(city_distances)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'tuple' and 'tuple'"
      ]
     }
    ],
@@ -255,9 +321,11 @@
     "for c in combinations(chicken_dict.items(), M):    \n",
     "    dist = 0    \n",
     "    for name, coord in house_dict.items():\n",
-    "        dist = 0\n",
-    "        for cc in c:\n",
-    "            dist += measure_dist(cc[1] - coord)\n",
+    "        cc_list = []        \n",
+    "        for i in range(len(c)):\n",
+    "            cc_dist = measure_dist(c[i][1] - coord)\n",
+    "            cc_list.append(cc_dist)\n",
+    "        dist = min(cc_list)\n",
     "        \n",
     "    city_distances.append(dist)\n",
     "    \n",
