More on boj_15686.ipynb

--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_15686.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 27>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m         dist \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m         \u001b[39mfor\u001b[39;00m cc \u001b[39min\u001b[39;00m c:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m             dist \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m measure_dist(cc[\u001b[39m1\u001b[39;49m] \u001b[39m-\u001b[39;49m coord)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     city_distances\u001b[39m.\u001b[39mappend(dist)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m min_city_distance \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(city_distances)\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_15686.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 27>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m cc_list \u001b[39m=\u001b[39m []        \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(c)):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m     cc_dist \u001b[39m=\u001b[39m measure_dist(c[i][\u001b[39m1\u001b[39;49m] \u001b[39m-\u001b[39;49m coord)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m     cc_list\u001b[39m.\u001b[39mappend(cc_dist)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m dist \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(cc_list)\n",
       "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'tuple' and 'tuple'"
      ]
     }
@@ -323,6 +323,7 @@
     "    for name, coord in house_dict.items():\n",
     "        cc_list = []        \n",
     "        for i in range(len(c)):\n",
+    "            print(c[i][1], + \"   \" + coord)\n",
     "            cc_dist = measure_dist(c[i][1] - coord)\n",
     "            cc_list.append(cc_dist)\n",
     "        dist = min(cc_list)\n",
