More on boj_15686.ipynb

--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -324,6 +324,7 @@
     "        cc_list = []        \n",
     "        for i in range(len(c)):\n",
     "            print(c[i][1], coord)\n",
+    "            print()\n",
     "            cc_dist = measure_dist(c[i][1] - coord)\n",
     "            cc_list.append(cc_dist)\n",
     "        dist = min(cc_list)\n",
