--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -276,18 +276,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1) (0, 3)\n",
+      "\n"
+     ]
+    },
+    {
      "ename": "TypeError",
-     "evalue": "bad operand type for unary +: 'str'",
+     "evalue": "unsupported operand type(s) for -: 'tuple' and 'tuple'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_15686.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 27>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m cc_list \u001b[39m=\u001b[39m []        \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(c)):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m     \u001b[39mprint\u001b[39m(c[i][\u001b[39m1\u001b[39m], \u001b[39m+\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39m   \u001b[39;49m\u001b[39m\"\u001b[39;49m \u001b[39m+\u001b[39m coord)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m     cc_dist \u001b[39m=\u001b[39m measure_dist(c[i][\u001b[39m1\u001b[39m] \u001b[39m-\u001b[39m coord)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     cc_list\u001b[39m.\u001b[39mappend(cc_dist)\n",
-      "\u001b[1;31mTypeError\u001b[0m: bad operand type for unary +: 'str'"
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_15686.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 27>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m     \u001b[39mprint\u001b[39m(c[i][\u001b[39m1\u001b[39m], coord)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m     \u001b[39mprint\u001b[39m()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     cc_dist \u001b[39m=\u001b[39m measure_dist(c[i][\u001b[39m1\u001b[39;49m] \u001b[39m-\u001b[39;49m coord)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m     cc_list\u001b[39m.\u001b[39mappend(cc_dist)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m dist \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(cc_list)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'tuple' and 'tuple'"
      ]
     }
    ],
@@ -325,7 +333,7 @@
     "        for i in range(len(c)):\n",
     "            print(c[i][1], coord)\n",
     "            print()\n",
-    "            cc_dist = measure_dist(c[i][1] - coord)\n",
+    "            cc_dist = measure_dist(c[i][1], coord)\n",
     "            cc_list.append(cc_dist)\n",
     "        dist = min(cc_list)\n",
     "        \n",
@@ -333,6 +341,26 @@
     "    \n",
     "min_city_distance = min(city_distances)\n",
     "print(min_city_distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "measure_dist((0, 1), (0, 3))"
    ]
   },
   {
