--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -284,18 +284,246 @@
      "output_type": "stream",
      "text": [
       "(0, 1) (0, 3)\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'tuple' and 'tuple'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_15686.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 27>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m     \u001b[39mprint\u001b[39m(c[i][\u001b[39m1\u001b[39m], coord)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m     \u001b[39mprint\u001b[39m()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     cc_dist \u001b[39m=\u001b[39m measure_dist(c[i][\u001b[39m1\u001b[39;49m] \u001b[39m-\u001b[39;49m coord)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m     cc_list\u001b[39m.\u001b[39mappend(cc_dist)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_15686.ipynb#X14sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m dist \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(cc_list)\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'tuple' and 'tuple'"
+      "\n",
+      "(3, 0) (0, 3)\n",
+      "\n",
+      "(0, 1) (1, 0)\n",
+      "\n",
+      "(3, 0) (1, 0)\n",
+      "\n",
+      "(0, 1) (1, 2)\n",
+      "\n",
+      "(3, 0) (1, 2)\n",
+      "\n",
+      "(0, 1) (3, 3)\n",
+      "\n",
+      "(3, 0) (3, 3)\n",
+      "\n",
+      "(0, 1) (3, 4)\n",
+      "\n",
+      "(3, 0) (3, 4)\n",
+      "\n",
+      "(0, 1) (4, 3)\n",
+      "\n",
+      "(3, 0) (4, 3)\n",
+      "\n",
+      "(0, 1) (0, 3)\n",
+      "\n",
+      "(4, 0) (0, 3)\n",
+      "\n",
+      "(0, 1) (1, 0)\n",
+      "\n",
+      "(4, 0) (1, 0)\n",
+      "\n",
+      "(0, 1) (1, 2)\n",
+      "\n",
+      "(4, 0) (1, 2)\n",
+      "\n",
+      "(0, 1) (3, 3)\n",
+      "\n",
+      "(4, 0) (3, 3)\n",
+      "\n",
+      "(0, 1) (3, 4)\n",
+      "\n",
+      "(4, 0) (3, 4)\n",
+      "\n",
+      "(0, 1) (4, 3)\n",
+      "\n",
+      "(4, 0) (4, 3)\n",
+      "\n",
+      "(0, 1) (0, 3)\n",
+      "\n",
+      "(4, 1) (0, 3)\n",
+      "\n",
+      "(0, 1) (1, 0)\n",
+      "\n",
+      "(4, 1) (1, 0)\n",
+      "\n",
+      "(0, 1) (1, 2)\n",
+      "\n",
+      "(4, 1) (1, 2)\n",
+      "\n",
+      "(0, 1) (3, 3)\n",
+      "\n",
+      "(4, 1) (3, 3)\n",
+      "\n",
+      "(0, 1) (3, 4)\n",
+      "\n",
+      "(4, 1) (3, 4)\n",
+      "\n",
+      "(0, 1) (4, 3)\n",
+      "\n",
+      "(4, 1) (4, 3)\n",
+      "\n",
+      "(0, 1) (0, 3)\n",
+      "\n",
+      "(4, 4) (0, 3)\n",
+      "\n",
+      "(0, 1) (1, 0)\n",
+      "\n",
+      "(4, 4) (1, 0)\n",
+      "\n",
+      "(0, 1) (1, 2)\n",
+      "\n",
+      "(4, 4) (1, 2)\n",
+      "\n",
+      "(0, 1) (3, 3)\n",
+      "\n",
+      "(4, 4) (3, 3)\n",
+      "\n",
+      "(0, 1) (3, 4)\n",
+      "\n",
+      "(4, 4) (3, 4)\n",
+      "\n",
+      "(0, 1) (4, 3)\n",
+      "\n",
+      "(4, 4) (4, 3)\n",
+      "\n",
+      "(3, 0) (0, 3)\n",
+      "\n",
+      "(4, 0) (0, 3)\n",
+      "\n",
+      "(3, 0) (1, 0)\n",
+      "\n",
+      "(4, 0) (1, 0)\n",
+      "\n",
+      "(3, 0) (1, 2)\n",
+      "\n",
+      "(4, 0) (1, 2)\n",
+      "\n",
+      "(3, 0) (3, 3)\n",
+      "\n",
+      "(4, 0) (3, 3)\n",
+      "\n",
+      "(3, 0) (3, 4)\n",
+      "\n",
+      "(4, 0) (3, 4)\n",
+      "\n",
+      "(3, 0) (4, 3)\n",
+      "\n",
+      "(4, 0) (4, 3)\n",
+      "\n",
+      "(3, 0) (0, 3)\n",
+      "\n",
+      "(4, 1) (0, 3)\n",
+      "\n",
+      "(3, 0) (1, 0)\n",
+      "\n",
+      "(4, 1) (1, 0)\n",
+      "\n",
+      "(3, 0) (1, 2)\n",
+      "\n",
+      "(4, 1) (1, 2)\n",
+      "\n",
+      "(3, 0) (3, 3)\n",
+      "\n",
+      "(4, 1) (3, 3)\n",
+      "\n",
+      "(3, 0) (3, 4)\n",
+      "\n",
+      "(4, 1) (3, 4)\n",
+      "\n",
+      "(3, 0) (4, 3)\n",
+      "\n",
+      "(4, 1) (4, 3)\n",
+      "\n",
+      "(3, 0) (0, 3)\n",
+      "\n",
+      "(4, 4) (0, 3)\n",
+      "\n",
+      "(3, 0) (1, 0)\n",
+      "\n",
+      "(4, 4) (1, 0)\n",
+      "\n",
+      "(3, 0) (1, 2)\n",
+      "\n",
+      "(4, 4) (1, 2)\n",
+      "\n",
+      "(3, 0) (3, 3)\n",
+      "\n",
+      "(4, 4) (3, 3)\n",
+      "\n",
+      "(3, 0) (3, 4)\n",
+      "\n",
+      "(4, 4) (3, 4)\n",
+      "\n",
+      "(3, 0) (4, 3)\n",
+      "\n",
+      "(4, 4) (4, 3)\n",
+      "\n",
+      "(4, 0) (0, 3)\n",
+      "\n",
+      "(4, 1) (0, 3)\n",
+      "\n",
+      "(4, 0) (1, 0)\n",
+      "\n",
+      "(4, 1) (1, 0)\n",
+      "\n",
+      "(4, 0) (1, 2)\n",
+      "\n",
+      "(4, 1) (1, 2)\n",
+      "\n",
+      "(4, 0) (3, 3)\n",
+      "\n",
+      "(4, 1) (3, 3)\n",
+      "\n",
+      "(4, 0) (3, 4)\n",
+      "\n",
+      "(4, 1) (3, 4)\n",
+      "\n",
+      "(4, 0) (4, 3)\n",
+      "\n",
+      "(4, 1) (4, 3)\n",
+      "\n",
+      "(4, 0) (0, 3)\n",
+      "\n",
+      "(4, 4) (0, 3)\n",
+      "\n",
+      "(4, 0) (1, 0)\n",
+      "\n",
+      "(4, 4) (1, 0)\n",
+      "\n",
+      "(4, 0) (1, 2)\n",
+      "\n",
+      "(4, 4) (1, 2)\n",
+      "\n",
+      "(4, 0) (3, 3)\n",
+      "\n",
+      "(4, 4) (3, 3)\n",
+      "\n",
+      "(4, 0) (3, 4)\n",
+      "\n",
+      "(4, 4) (3, 4)\n",
+      "\n",
+      "(4, 0) (4, 3)\n",
+      "\n",
+      "(4, 4) (4, 3)\n",
+      "\n",
+      "(4, 1) (0, 3)\n",
+      "\n",
+      "(4, 4) (0, 3)\n",
+      "\n",
+      "(4, 1) (1, 0)\n",
+      "\n",
+      "(4, 4) (1, 0)\n",
+      "\n",
+      "(4, 1) (1, 2)\n",
+      "\n",
+      "(4, 4) (1, 2)\n",
+      "\n",
+      "(4, 1) (3, 3)\n",
+      "\n",
+      "(4, 4) (3, 3)\n",
+      "\n",
+      "(4, 1) (3, 4)\n",
+      "\n",
+      "(4, 4) (3, 4)\n",
+      "\n",
+      "(4, 1) (4, 3)\n",
+      "\n",
+      "(4, 4) (4, 3)\n",
+      "\n",
+      "1\n"
      ]
     }
    ],
@@ -329,18 +557,48 @@
     "for c in combinations(chicken_dict.items(), M):    \n",
     "    dist = 0    \n",
     "    for name, coord in house_dict.items():\n",
-    "        cc_list = []        \n",
+    "        cc_list = []\n",
+    "        min_cc_dist = 0        \n",
     "        for i in range(len(c)):\n",
     "            print(c[i][1], coord)\n",
-    "            print()\n",
+    "            \n",
     "            cc_dist = measure_dist(c[i][1], coord)\n",
+    "            print(cc_dist)            \n",
+    "            \n",
     "            cc_list.append(cc_dist)\n",
-    "        dist = min(cc_list)\n",
+    "        min_cc_dist = min(cc_list)\n",
     "        \n",
-    "    city_distances.append(dist)\n",
+    "    city_distances.append(min_cc_dist)\n",
     "    \n",
     "min_city_distance = min(city_distances)\n",
     "print(min_city_distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 3, 2, 1, 3, 2, 1, 2, 1, 1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(10, None)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(city_distances), print(city_distances)"
    ]
   },
   {
