More on boj_15686.ipynb

--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -563,12 +563,14 @@
     "            print(c[i][1], coord)\n",
     "            \n",
     "            cc_dist = measure_dist(c[i][1], coord)\n",
-    "            print(cc_dist)            \n",
+    "            print(cc_dist)\n",
+    "            print()            \n",
     "            \n",
     "            cc_list.append(cc_dist)\n",
     "        min_cc_dist = min(cc_list)\n",
     "        \n",
     "    city_distances.append(min_cc_dist)\n",
+    "    print()\n",
     "    \n",
     "min_city_distance = min(city_distances)\n",
     "print(min_city_distance)"
