--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -284,244 +284,374 @@
      "output_type": "stream",
      "text": [
       "(0, 1) (0, 3)\n",
+      "2\n",
       "\n",
       "(3, 0) (0, 3)\n",
+      "6\n",
       "\n",
       "(0, 1) (1, 0)\n",
+      "2\n",
       "\n",
       "(3, 0) (1, 0)\n",
+      "2\n",
       "\n",
       "(0, 1) (1, 2)\n",
+      "2\n",
       "\n",
       "(3, 0) (1, 2)\n",
+      "4\n",
       "\n",
       "(0, 1) (3, 3)\n",
+      "5\n",
       "\n",
       "(3, 0) (3, 3)\n",
+      "3\n",
       "\n",
       "(0, 1) (3, 4)\n",
+      "6\n",
       "\n",
       "(3, 0) (3, 4)\n",
+      "4\n",
       "\n",
       "(0, 1) (4, 3)\n",
+      "6\n",
       "\n",
       "(3, 0) (4, 3)\n",
+      "4\n",
+      "\n",
       "\n",
       "(0, 1) (0, 3)\n",
+      "2\n",
       "\n",
       "(4, 0) (0, 3)\n",
+      "7\n",
       "\n",
       "(0, 1) (1, 0)\n",
+      "2\n",
       "\n",
       "(4, 0) (1, 0)\n",
+      "3\n",
       "\n",
       "(0, 1) (1, 2)\n",
+      "2\n",
       "\n",
       "(4, 0) (1, 2)\n",
+      "5\n",
       "\n",
       "(0, 1) (3, 3)\n",
+      "5\n",
       "\n",
       "(4, 0) (3, 3)\n",
+      "4\n",
       "\n",
       "(0, 1) (3, 4)\n",
+      "6\n",
       "\n",
       "(4, 0) (3, 4)\n",
+      "5\n",
       "\n",
       "(0, 1) (4, 3)\n",
+      "6\n",
       "\n",
       "(4, 0) (4, 3)\n",
+      "3\n",
+      "\n",
       "\n",
       "(0, 1) (0, 3)\n",
+      "2\n",
       "\n",
       "(4, 1) (0, 3)\n",
+      "6\n",
       "\n",
       "(0, 1) (1, 0)\n",
+      "2\n",
       "\n",
       "(4, 1) (1, 0)\n",
+      "4\n",
       "\n",
       "(0, 1) (1, 2)\n",
+      "2\n",
       "\n",
       "(4, 1) (1, 2)\n",
+      "4\n",
       "\n",
       "(0, 1) (3, 3)\n",
+      "5\n",
       "\n",
       "(4, 1) (3, 3)\n",
+      "3\n",
       "\n",
       "(0, 1) (3, 4)\n",
+      "6\n",
       "\n",
       "(4, 1) (3, 4)\n",
+      "4\n",
       "\n",
       "(0, 1) (4, 3)\n",
+      "6\n",
       "\n",
       "(4, 1) (4, 3)\n",
+      "2\n",
+      "\n",
       "\n",
       "(0, 1) (0, 3)\n",
+      "2\n",
       "\n",
       "(4, 4) (0, 3)\n",
+      "5\n",
       "\n",
       "(0, 1) (1, 0)\n",
+      "2\n",
       "\n",
       "(4, 4) (1, 0)\n",
+      "7\n",
       "\n",
       "(0, 1) (1, 2)\n",
+      "2\n",
       "\n",
       "(4, 4) (1, 2)\n",
+      "5\n",
       "\n",
       "(0, 1) (3, 3)\n",
+      "5\n",
       "\n",
       "(4, 4) (3, 3)\n",
+      "2\n",
       "\n",
       "(0, 1) (3, 4)\n",
+      "6\n",
       "\n",
       "(4, 4) (3, 4)\n",
+      "1\n",
       "\n",
       "(0, 1) (4, 3)\n",
+      "6\n",
       "\n",
       "(4, 4) (4, 3)\n",
+      "1\n",
+      "\n",
       "\n",
       "(3, 0) (0, 3)\n",
+      "6\n",
       "\n",
       "(4, 0) (0, 3)\n",
+      "7\n",
       "\n",
       "(3, 0) (1, 0)\n",
+      "2\n",
       "\n",
       "(4, 0) (1, 0)\n",
+      "3\n",
       "\n",
       "(3, 0) (1, 2)\n",
+      "4\n",
       "\n",
       "(4, 0) (1, 2)\n",
+      "5\n",
       "\n",
       "(3, 0) (3, 3)\n",
+      "3\n",
       "\n",
       "(4, 0) (3, 3)\n",
+      "4\n",
       "\n",
       "(3, 0) (3, 4)\n",
+      "4\n",
       "\n",
       "(4, 0) (3, 4)\n",
+      "5\n",
       "\n",
       "(3, 0) (4, 3)\n",
+      "4\n",
       "\n",
       "(4, 0) (4, 3)\n",
+      "3\n",
+      "\n",
       "\n",
       "(3, 0) (0, 3)\n",
+      "6\n",
       "\n",
       "(4, 1) (0, 3)\n",
+      "6\n",
       "\n",
       "(3, 0) (1, 0)\n",
+      "2\n",
       "\n",
       "(4, 1) (1, 0)\n",
+      "4\n",
       "\n",
       "(3, 0) (1, 2)\n",
+      "4\n",
       "\n",
       "(4, 1) (1, 2)\n",
+      "4\n",
       "\n",
       "(3, 0) (3, 3)\n",
+      "3\n",
       "\n",
       "(4, 1) (3, 3)\n",
+      "3\n",
       "\n",
       "(3, 0) (3, 4)\n",
+      "4\n",
       "\n",
       "(4, 1) (3, 4)\n",
+      "4\n",
       "\n",
       "(3, 0) (4, 3)\n",
+      "4\n",
       "\n",
       "(4, 1) (4, 3)\n",
+      "2\n",
+      "\n",
       "\n",
       "(3, 0) (0, 3)\n",
+      "6\n",
       "\n",
       "(4, 4) (0, 3)\n",
+      "5\n",
       "\n",
       "(3, 0) (1, 0)\n",
+      "2\n",
       "\n",
       "(4, 4) (1, 0)\n",
+      "7\n",
       "\n",
       "(3, 0) (1, 2)\n",
+      "4\n",
       "\n",
       "(4, 4) (1, 2)\n",
+      "5\n",
       "\n",
       "(3, 0) (3, 3)\n",
+      "3\n",
       "\n",
       "(4, 4) (3, 3)\n",
+      "2\n",
       "\n",
       "(3, 0) (3, 4)\n",
+      "4\n",
       "\n",
       "(4, 4) (3, 4)\n",
+      "1\n",
       "\n",
       "(3, 0) (4, 3)\n",
+      "4\n",
       "\n",
       "(4, 4) (4, 3)\n",
+      "1\n",
+      "\n",
       "\n",
       "(4, 0) (0, 3)\n",
+      "7\n",
       "\n",
       "(4, 1) (0, 3)\n",
+      "6\n",
       "\n",
       "(4, 0) (1, 0)\n",
+      "3\n",
       "\n",
       "(4, 1) (1, 0)\n",
+      "4\n",
       "\n",
       "(4, 0) (1, 2)\n",
+      "5\n",
       "\n",
       "(4, 1) (1, 2)\n",
+      "4\n",
       "\n",
       "(4, 0) (3, 3)\n",
+      "4\n",
       "\n",
       "(4, 1) (3, 3)\n",
+      "3\n",
       "\n",
       "(4, 0) (3, 4)\n",
+      "5\n",
       "\n",
       "(4, 1) (3, 4)\n",
+      "4\n",
       "\n",
       "(4, 0) (4, 3)\n",
+      "3\n",
       "\n",
       "(4, 1) (4, 3)\n",
+      "2\n",
+      "\n",
       "\n",
       "(4, 0) (0, 3)\n",
+      "7\n",
       "\n",
       "(4, 4) (0, 3)\n",
+      "5\n",
       "\n",
       "(4, 0) (1, 0)\n",
+      "3\n",
       "\n",
       "(4, 4) (1, 0)\n",
+      "7\n",
       "\n",
       "(4, 0) (1, 2)\n",
+      "5\n",
       "\n",
       "(4, 4) (1, 2)\n",
+      "5\n",
       "\n",
       "(4, 0) (3, 3)\n",
+      "4\n",
       "\n",
       "(4, 4) (3, 3)\n",
+      "2\n",
       "\n",
       "(4, 0) (3, 4)\n",
+      "5\n",
       "\n",
       "(4, 4) (3, 4)\n",
+      "1\n",
       "\n",
       "(4, 0) (4, 3)\n",
+      "3\n",
       "\n",
       "(4, 4) (4, 3)\n",
+      "1\n",
+      "\n",
       "\n",
       "(4, 1) (0, 3)\n",
+      "6\n",
       "\n",
       "(4, 4) (0, 3)\n",
+      "5\n",
       "\n",
       "(4, 1) (1, 0)\n",
+      "4\n",
       "\n",
       "(4, 4) (1, 0)\n",
+      "7\n",
       "\n",
       "(4, 1) (1, 2)\n",
+      "4\n",
       "\n",
       "(4, 4) (1, 2)\n",
+      "5\n",
       "\n",
       "(4, 1) (3, 3)\n",
+      "3\n",
       "\n",
       "(4, 4) (3, 3)\n",
+      "2\n",
       "\n",
       "(4, 1) (3, 4)\n",
+      "4\n",
       "\n",
       "(4, 4) (3, 4)\n",
+      "1\n",
       "\n",
       "(4, 1) (4, 3)\n",
+      "2\n",
       "\n",
       "(4, 4) (4, 3)\n",
+      "1\n",
+      "\n",
       "\n",
       "1\n"
      ]
@@ -563,11 +693,12 @@
     "            print(c[i][1], coord)\n",
     "            \n",
     "            cc_dist = measure_dist(c[i][1], coord)\n",
-    "            print(cc_dist)\n",
-    "            print()            \n",
+    "            print(cc_dist)                       \n",
     "            \n",
     "            cc_list.append(cc_dist)\n",
-    "        min_cc_dist = min(cc_list)\n",
+    "            min_cc_dist = min(cc_list)\n",
+    "            print(min_cc_dist)\n",
+    "            print()\n",
     "        \n",
     "    city_distances.append(min_cc_dist)\n",
     "    print()\n",
