--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -375,7 +375,48 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "def measure_dist(tuple1, tuple2):\n",
+    "    dist = abs(tuple1[0] - tuple2[0]) + abs(tuple1[1] - tuple2[1])\n",
+    "    return dist\n",
+    "\n",
+    "N, M = map(int, input().split())  # (5, 2)\n",
+    "city = [[0] * M for _ in range(N)]\n",
+    "\n",
+    "for i in range(N):\n",
+    "    city[i] = list(map(int, input().split()))\n",
+    "    \n",
+    "chicken_dict = {}\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if city[i][j] == 2:\n",
+    "            chicken_dict['chicken_' + str(i) + str(j)] = (i, j)\n",
+    "            \n",
+    "house_dict = {}\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if city[i][j] == 1:\n",
+    "            house_dict['house_' + str(i) + str(j)] = (i, j)\n",
+    "            \n",
+    "city_distances = []\n",
+    "\n",
+    "for c in combinations(chicken_dict.items(), M):    \n",
+    "    dist = 0    \n",
+    "    for name, coord in house_dict.items():\n",
+    "        cc_list = []\n",
+    "               \n",
+    "        for i in range(len(c)):            \n",
+    "            cc_dist = measure_dist(c[i][1], coord)           \n",
+    "            cc_list.append(cc_dist)\n",
+    "        min_cc_dist = min(cc_list)\n",
+    "        dist += min_cc_dist\n",
+    "    city_distances.append(dist)    \n",
+    "    \n",
+    "min_city_distance = min(city_distances)\n",
+    "print(min_city_distance)"
+   ]
   }
  ],
  "metadata": {
