More on boj_15686.ipynb

--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -276,6 +276,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [
@@ -416,6 +451,455 @@
     "    \n",
     "min_city_distance = min(city_distances)\n",
     "print(min_city_distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "def measure_dist(tuple1, tuple2):\n",
+    "    dist = abs(tuple1[0] - tuple2[0]) + abs(tuple1[1] - tuple2[1])\n",
+    "    return dist\n",
+    "\n",
+    "N, M = map(int, input().split())  # (5, 2)\n",
+    "city = [[0] * M for _ in range(N)]\n",
+    "\n",
+    "for i in range(N):\n",
+    "    city[i] = list(map(int, input().split()))\n",
+    "    \n",
+    "chicken_dict = {}\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if city[i][j] == 2:\n",
+    "            chicken_dict['chicken_' + str(i) + str(j)] = (i, j)\n",
+    "            \n",
+    "house_dict = {}\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if city[i][j] == 1:\n",
+    "            house_dict['house_' + str(i) + str(j)] = (i, j)\n",
+    "            \n",
+    "city_distances = []\n",
+    "\n",
+    "for c in combinations(chicken_dict.items(), M):    \n",
+    "    dist = 0    \n",
+    "    for name, coord in house_dict.items():\n",
+    "        cc_list = []\n",
+    "               \n",
+    "        for i in range(len(c)):\n",
+    "            print(c[i][1], coord)\n",
+    "            \n",
+    "            cc_dist = measure_dist(c[i][1], coord)\n",
+    "            print(cc_dist)                       \n",
+    "            \n",
+    "            cc_list.append(cc_dist)\n",
+    "        min_cc_dist = min(cc_list)\n",
+    "        print(min_cc_dist)\n",
+    "        print()\n",
+    "        dist += min_cc_dist\n",
+    "    city_distances.append(dist)\n",
+    "    print()\n",
+    "    \n",
+    "min_city_distance = min(city_distances)\n",
+    "print(min_city_distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2) (0, 2)\n",
+      "1\n",
+      "1\n",
+      "\n",
+      "(1, 2) (1, 4)\n",
+      "2\n",
+      "2\n",
+      "\n",
+      "(1, 2) (2, 1)\n",
+      "2\n",
+      "2\n",
+      "\n",
+      "(1, 2) (3, 2)\n",
+      "2\n",
+      "2\n",
+      "\n",
+      "\n",
+      "(2, 2) (0, 2)\n",
+      "2\n",
+      "2\n",
+      "\n",
+      "(2, 2) (1, 4)\n",
+      "3\n",
+      "3\n",
+      "\n",
+      "(2, 2) (2, 1)\n",
+      "1\n",
+      "1\n",
+      "\n",
+      "(2, 2) (3, 2)\n",
+      "1\n",
+      "1\n",
+      "\n",
+      "\n",
+      "(4, 4) (0, 2)\n",
+      "6\n",
+      "6\n",
+      "\n",
+      "(4, 4) (1, 4)\n",
+      "3\n",
+      "3\n",
+      "\n",
+      "(4, 4) (2, 1)\n",
+      "5\n",
+      "5\n",
+      "\n",
+      "(4, 4) (3, 2)\n",
+      "3\n",
+      "3\n",
+      "\n",
+      "\n",
+      "(1, 2) (0, 2)\n",
+      "1\n",
+      "(2, 2) (0, 2)\n",
+      "2\n",
+      "1\n",
+      "\n",
+      "(1, 2) (1, 4)\n",
+      "2\n",
+      "(2, 2) (1, 4)\n",
+      "3\n",
+      "2\n",
+      "\n",
+      "(1, 2) (2, 1)\n",
+      "2\n",
+      "(2, 2) (2, 1)\n",
+      "1\n",
+      "1\n",
+      "\n",
+      "(1, 2) (3, 2)\n",
+      "2\n",
+      "(2, 2) (3, 2)\n",
+      "1\n",
+      "1\n",
+      "\n",
+      "\n",
+      "(1, 2) (0, 2)\n",
+      "1\n",
+      "(4, 4) (0, 2)\n",
+      "6\n",
+      "1\n",
+      "\n",
+      "(1, 2) (1, 4)\n",
+      "2\n",
+      "(4, 4) (1, 4)\n",
+      "3\n",
+      "2\n",
+      "\n",
+      "(1, 2) (2, 1)\n",
+      "2\n",
+      "(4, 4) (2, 1)\n",
+      "5\n",
+      "2\n",
+      "\n",
+      "(1, 2) (3, 2)\n",
+      "2\n",
+      "(4, 4) (3, 2)\n",
+      "3\n",
+      "2\n",
+      "\n",
+      "\n",
+      "(2, 2) (0, 2)\n",
+      "2\n",
+      "(4, 4) (0, 2)\n",
+      "6\n",
+      "2\n",
+      "\n",
+      "(2, 2) (1, 4)\n",
+      "3\n",
+      "(4, 4) (1, 4)\n",
+      "3\n",
+      "3\n",
+      "\n",
+      "(2, 2) (2, 1)\n",
+      "1\n",
+      "(4, 4) (2, 1)\n",
+      "5\n",
+      "1\n",
+      "\n",
+      "(2, 2) (3, 2)\n",
+      "1\n",
+      "(4, 4) (3, 2)\n",
+      "3\n",
+      "1\n",
+      "\n",
+      "\n",
+      "(1, 2) (0, 2)\n",
+      "1\n",
+      "(2, 2) (0, 2)\n",
+      "2\n",
+      "(4, 4) (0, 2)\n",
+      "6\n",
+      "1\n",
+      "\n",
+      "(1, 2) (1, 4)\n",
+      "2\n",
+      "(2, 2) (1, 4)\n",
+      "3\n",
+      "(4, 4) (1, 4)\n",
+      "3\n",
+      "2\n",
+      "\n",
+      "(1, 2) (2, 1)\n",
+      "2\n",
+      "(2, 2) (2, 1)\n",
+      "1\n",
+      "(4, 4) (2, 1)\n",
+      "5\n",
+      "1\n",
+      "\n",
+      "(1, 2) (3, 2)\n",
+      "2\n",
+      "(2, 2) (3, 2)\n",
+      "1\n",
+      "(4, 4) (3, 2)\n",
+      "3\n",
+      "1\n",
+      "\n",
+      "\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "def measure_dist(tuple1, tuple2):\n",
+    "    dist = abs(tuple1[0] - tuple2[0]) + abs(tuple1[1] - tuple2[1])\n",
+    "    return dist\n",
+    "\n",
+    "N, M = map(int, input().split())  # (5, 2)\n",
+    "city = [[0] * M for _ in range(N)]\n",
+    "\n",
+    "for i in range(N):\n",
+    "    city[i] = list(map(int, input().split()))\n",
+    "    \n",
+    "chicken_dict = {}\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if city[i][j] == 2:\n",
+    "            chicken_dict['chicken_' + str(i) + str(j)] = (i, j)\n",
+    "            \n",
+    "house_dict = {}\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if city[i][j] == 1:\n",
+    "            house_dict['house_' + str(i) + str(j)] = (i, j)\n",
+    "            \n",
+    "city_distances = []\n",
+    "\n",
+    "for num_ch in range(1, M+1):    \n",
+    "    for c in combinations(chicken_dict.items(), num_ch):\n",
+    "        dist = 0\n",
+    "        for name, coord in house_dict.items():\n",
+    "            cc_list = []\n",
+    "            \n",
+    "            for i in range(len(c)):\n",
+    "                print(c[i][1], coord)\n",
+    "                \n",
+    "                cc_dist = measure_dist(c[i][1], coord)\n",
+    "                print(cc_dist)\n",
+    "                \n",
+    "                cc_list.append(cc_dist)\n",
+    "            min_cc_dist = min(cc_list)\n",
+    "            print(min_cc_dist)\n",
+    "            print()\n",
+    "            \n",
+    "            dist += min_cc_dist\n",
+    "        city_distances.append(dist)\n",
+    "        print()\n",
+    "        \n",
+    "    min_city_distance = min(city_distances)\n",
+    "    \n",
+    "print(min_city_distance)          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "N, M = map(int, input().split())  # (5, 2)\n",
+    "city = [[0] * N for _ in range(N)]\n",
+    "\n",
+    "for i in range(N):\n",
+    "    city[i] = list(map(int, input().split()))\n",
+    "    \n",
+    "chicken_dict = {}\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if city[i][j] == 2:\n",
+    "            chicken_dict['chicken_' + str(i) + str(j)] = (i, j)\n",
+    "            \n",
+    "house_dict = {}\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if city[i][j] == 1:\n",
+    "            house_dict['house_' + str(i) + str(j)] = (i, j)\n",
+    "            \n",
+    "def measure_dist(tuple1, tuple2):\n",
+    "    dist = abs(tuple1[0] - tuple2[0]) + abs(tuple1[1] - tuple2[1])\n",
+    "    return dist\n",
+    "            \n",
+    "city_distances = []\n",
+    "\n",
+    "for num_ch in range(1, M+1):    \n",
+    "    for c in combinations(chicken_dict.items(), num_ch):\n",
+    "        dist = 0\n",
+    "        for name, coord in house_dict.items():\n",
+    "            cc_list = []\n",
+    "            \n",
+    "            for i in range(len(c)):                \n",
+    "                cc_dist = measure_dist(c[i][1], coord)                \n",
+    "                cc_list.append(cc_dist)\n",
+    "            min_cc_dist = min(cc_list)        \n",
+    "            \n",
+    "            dist += min_cc_dist\n",
+    "        city_distances.append(dist)        \n",
+    "        \n",
+    "    min_city_distance = min(city_distances)\n",
+    "    \n",
+    "print(min_city_distance)          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "N, M = map(int, input().split())  # (5, 2)\n",
+    "city = [[0] * N for _ in range(N)]\n",
+    "\n",
+    "for i in range(N):\n",
+    "\n",
+    "    for j, cell in enumerate(map(int, input().split())):\n",
+    "        city[i][j] = cell\n",
+    "    \n",
+    "chicken_dict = {}\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if city[i][j] == 2:\n",
+    "            chicken_dict['chicken_' + str(i) + str(j)] = (i, j)\n",
+    "            \n",
+    "house_dict = {}\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if city[i][j] == 1:\n",
+    "            house_dict['house_' + str(i) + str(j)] = (i, j)\n",
+    "            \n",
+    "def measure_dist(tuple1, tuple2):\n",
+    "    dist = abs(tuple1[0] - tuple2[0]) + abs(tuple1[1] - tuple2[1])\n",
+    "    return dist\n",
+    "            \n",
+    "city_distances = []\n",
+    "\n",
+    "for num_ch in range(1, M+1):    \n",
+    "    for c in combinations(chicken_dict.items(), num_ch):\n",
+    "        dist = 0\n",
+    "        for name, coord in house_dict.items():\n",
+    "            cc_list = []\n",
+    "            \n",
+    "            for i in range(len(c)):                \n",
+    "                cc_dist = measure_dist(c[i][1], coord)                \n",
+    "                cc_list.append(cc_dist)\n",
+    "            min_cc_dist = min(cc_list)        \n",
+    "            \n",
+    "            dist += min_cc_dist\n",
+    "        city_distances.append(dist)        \n",
+    "        \n",
+    "    min_city_distance = min(city_distances)\n",
+    "    \n",
+    "print(min_city_distance)          "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 치킨거리 = 집과 가장 가까운 치킨집간의 거리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N, M = map(int, input().split())  # (5, 2)\n",
+    "city = [[0] * N for _ in range(N)]\n",
+    "\n",
+    "for i in range(N):\n",
+    "\n",
+    "    for j, cell in enumerate(map(int, input().split())):\n",
+    "        city[i][j] = cell"
    ]
   }
  ],
