More on boj_15686.ipynb

--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,6 +900,28 @@
     "\n",
     "    for j, cell in enumerate(map(int, input().split())):\n",
     "        city[i][j] = cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 0, 1, 0]\n",
+      "[1, 0, 1, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[2, 0, 0, 1, 1]\n",
+      "[2, 2, 0, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in city:\n",
+    "    print(l)"
    ]
   }
  ],
