More on boj_15686.ipynb

--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -930,7 +930,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 치킨거리 구하기\n",
     "def measure_dist(tuple1, tuple2):\n",
     "    dist = abs(tuple1[0] - tuple2[0]) + abs(tuple1[1] - tuple2[1])\n",
     "    return dist\n",
@@ -981,6 +980,47 @@
    "source": [
     "print(chicken_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "house_03 ('chicken_01', 2)\n",
+      "house_10 ('chicken_01', 2)\n",
+      "house_12 ('chicken_01', 2)\n",
+      "house_33 ('chicken_01', 5)\n",
+      "house_34 ('chicken_01', 6)\n",
+      "house_43 ('chicken_01', 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 치킨거리 구하기(chicken_dist_dict)\n",
+    "chicken_dist_dict = {}\n",
+    "\n",
+    "for hk, hv in house_dict.items():\n",
+    "    dist = []\n",
+    "    for ck, cv in chicken_dict.items():\n",
+    "        #print(f\"house_coord : {hv},  chicken_coord : {cv}\")\n",
+    "        dist.append((ck, (measure_dist(hv, cv))))\n",
+    "    min_dist = min(dist)\n",
+    "    chicken_dist_dict[hk] = min_dist\n",
+    "    \n",
+    "for k, v in chicken_dist_dict.items():\n",
+    "    print(k, v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
