More on boj_15686.ipynb

--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -983,19 +983,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[('chicken_01', 2), ('chicken_30', 6), ('chicken_40', 7), ('chicken_41', 6), ('chicken_44', 5)]\n",
+      "[('chicken_01', 2), ('chicken_30', 2), ('chicken_40', 3), ('chicken_41', 4), ('chicken_44', 7)]\n",
+      "[('chicken_01', 2), ('chicken_30', 4), ('chicken_40', 5), ('chicken_41', 4), ('chicken_44', 5)]\n",
+      "[('chicken_01', 5), ('chicken_30', 3), ('chicken_40', 4), ('chicken_41', 3), ('chicken_44', 2)]\n",
+      "[('chicken_01', 6), ('chicken_30', 4), ('chicken_40', 5), ('chicken_41', 4), ('chicken_44', 1)]\n",
+      "[('chicken_01', 6), ('chicken_30', 4), ('chicken_40', 3), ('chicken_41', 2), ('chicken_44', 1)]\n",
       "house_03 ('chicken_01', 2)\n",
       "house_10 ('chicken_01', 2)\n",
       "house_12 ('chicken_01', 2)\n",
-      "house_33 ('chicken_01', 5)\n",
-      "house_34 ('chicken_01', 6)\n",
-      "house_43 ('chicken_01', 6)\n"
+      "house_33 ('chicken_44', 2)\n",
+      "house_34 ('chicken_44', 1)\n",
+      "house_43 ('chicken_44', 1)\n"
      ]
     }
    ],
@@ -1007,8 +1013,10 @@
     "    dist = []\n",
     "    for ck, cv in chicken_dict.items():\n",
     "        #print(f\"house_coord : {hv},  chicken_coord : {cv}\")\n",
-    "        dist.append((ck, (measure_dist(hv, cv))))\n",
-    "    min_dist = min(dist)\n",
+    "        dist.append((ck, measure_dist(hv, cv)))\n",
+    "    print(dist)    \n",
+    "    dist = sorted(dist, key=lambda x : x[1])\n",
+    "    min_dist = dist[0]\n",
     "    chicken_dist_dict[hk] = min_dist\n",
     "    \n",
     "for k, v in chicken_dist_dict.items():\n",
@@ -1017,10 +1025,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'house_03': ('chicken_01', 2), 'house_10': ('chicken_01', 2), 'house_12': ('chicken_01', 2), 'house_33': ('chicken_44', 2), 'house_34': ('chicken_44', 1), 'house_43': ('chicken_44', 1)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chicken_dist_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N, M = map(int, input().split())  # (5, 2)\n",
+    "city = [[0] * N for _ in range(N)]\n",
+    "\n",
+    "for i in range(N):\n",
+    "\n",
+    "    for j, cell in enumerate(map(int, input().split())):\n",
+    "        city[i][j] = cell\n",
+    "        \n",
+    "def measure_dist(tuple1, tuple2):\n",
+    "    dist = abs(tuple1[0] - tuple2[0]) + abs(tuple1[1] - tuple2[1])\n",
+    "    return dist\n",
+    "\n",
+    "chicken_dict = {}\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if city[i][j] == 2:\n",
+    "            chicken_dict['chicken_' + str(i) + str(j)] = (i, j)\n",
+    "            \n",
+    "house_dict = {}\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if city[i][j] == 1:\n",
+    "            house_dict['house_' + str(i) + str(j)] = (i, j)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "chicken_dist_dict = {}\n",
+    "\n",
+    "for hk, hv in house_dict.items():\n",
+    "    for num_ch in range(1, M+1):            \n",
+    "        for c in combinations(chicken_dict.items(), num_ch):"
+   ]
   }
  ],
  "metadata": {
