More on boj_15686.ipynb

--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -1050,7 +1050,6 @@
     "city = [[0] * N for _ in range(N)]\n",
     "\n",
     "for i in range(N):\n",
-    "\n",
     "    for j, cell in enumerate(map(int, input().split())):\n",
     "        city[i][j] = cell\n",
     "        \n",
@@ -1068,15 +1067,27 @@
     "for i in range(N):\n",
     "    for j in range(N):\n",
     "        if city[i][j] == 1:\n",
-    "            house_dict['house_' + str(i) + str(j)] = (i, j)"
+    "            house_dict['house_' + str(i) + str(j)] = (i, j)\n",
+    "            \n",
+    "# 치킨거리 구하기(chicken_dist_dict)\n",
+    "chicken_dist_dict = {}\n",
+    "\n",
+    "for hk, hv in house_dict.items():\n",
+    "    dist = []\n",
+    "    for ck, cv in chicken_dict.items():\n",
+    "        #print(f\"house_coord : {hv},  chicken_coord : {cv}\")\n",
+    "        dist.append((ck, measure_dist(hv, cv)))\n",
+    "    print(dist)    \n",
+    "    dist = sorted(dist, key=lambda x : x[1])\n",
+    "    min_dist = dist[0]\n",
+    "    chicken_dist_dict[hk] = min_dist\n",
+    "\n",
+    "ans = 0    \n",
+    "for k, v in chicken_dist_dict.items():\n",
+    "    ans += v\n",
+    "    \n",
+    "print(ans)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
