More on boj_15686.ipynb

--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -1084,7 +1084,7 @@
     "\n",
     "ans = 0    \n",
     "for k, v in chicken_dist_dict.items():\n",
-    "    ans += v\n",
+    "    ans += v[1]\n",
     "    \n",
     "print(ans)"
    ]
