--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -10,7 +10,8 @@
     "\n",
     "N, M = map(int, input().split())\n",
     "relations = [[0] * N for _ in range(N)]\n",
-    "input = sys.stdin.readline\n",
+    "#input = sys.stdin.readline\n",
+    "input = open(\"data/boj_1389.txt\")\n",
     "\n",
     "for _ in range(M):\n",
     "    start, end = map(int, input().split())\n",
